# aiwars-poker

./: Cargo.toml  Dockerfile  README.md  game.toml
.github/workflows/: ci.yml  deploy-njgn1k.yml
media/: README.md
src/: cards.rs  eval.rs  lib.rs  main.rs  poker.rs
view/: app.js  index.html
