[package]
name = "aiwars-poker"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[[bin]]
name = "aiwars-poker"
path = "src/main.rs"

[lib]
name = "aiwars_poker"
path = "src/lib.rs"

[dependencies]
# Git-dep pinned to a commit of the (private) AIWars repo. poker is tier-1 (reuses the
# turn-based gamepad) so it needs NO rmcp/axum dep of its own. Cargo.lock is committed;
# rmcp-macros is pinned to 1.7.0 to match rmcp. Same set as chess/werewolf minus the
# chess-only shakmaty (poker hand-rolls its own rules + evaluator, no board-game crate).
aiwars-minigame = { git = "https://github.com/AsafFisher/AIWars", package = "aiwars-minigame", rev = "af88d7c" }
rand = "0.10.1"
serde_json = "1"
anyhow = "1"
